# sgl

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  Doxyfile  README.md  mkdocs.yml  paper.md  sgl.h
.cache/clangd/index/: main.cpp.49F53009744582A6.idx
docs/: about.md
src/: Makefile  demo.c  demo.h  main.c  main.cpp  sgl.c  sgl.h
